# menulens

./: .env.example  .gitignore  BUGS.yaml  Makefile  PRD.md  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/hooks/: post-edit-lint.sh  pre-bash-validate.sh  protect-files.sh  session-start.sh  stop-smoke-test.sh  task-completed-validate.sh  test-failure-notify.sh
data/taxonomies/: indian.yaml
frontend/: index.html
frontend/src/: App.css  App.tsx
frontend/src/api/: compare.ts  extract.ts
frontend/src/components/: ComparisonResults.tsx  DishSearch.tsx  MenuInput.tsx  MenuResults.tsx
frontend/src/types/: comparison.ts  menu.ts
scripts/: discover_restaurants.py  init_db.py  init_extensions.sql  run_pipeline.py  start_model_server.sh  test_extraction.py
src/api/: dependencies.py  main.py
src/api/routes/: benchmark.py  compare.py  demo.py  dishes.py  extract.py  restaurants.py
src/common/: logger.py  models.py
src/config/: settings.py
src/db/: engine.py  models.py
src/discovery/: google_maps.py  menu_url_finder.py  models.py  service.py
src/extraction/: confidence.py  model_client.py  prompts.py  schemas.py  service.py
src/fetching/: content_cleaner.py  html_fetcher.py  models.py  pdf_fetcher.py  service.py
src/intelligence/: comparison.py
src/normalization/: embeddings.py  matcher.py  service.py  taxonomy.py
src/pipeline/: runner.py
tests/: conftest.py  test_api_demo.py  test_api_extract.py  test_api_health.py  test_confidence.py  test_content_cleaner.py  test_discovery_models.py  test_extraction_integration.py  test_extraction_schemas.py  test_model_client.py  test_settings.py  test_taxonomy.py
