[project]
name = "menulens"
version = "0.1.0"
description = "Competitive menu pricing intelligence via semantic extraction"
requires-python = ">=3.11"
dependencies = [
    # API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    # Database
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "geoalchemy2>=0.15",
    "pgvector>=0.3",
    # HTTP / Scraping
    "httpx>=0.28",
    "beautifulsoup4>=4.12",
    "readability-lxml>=0.8",
    "playwright>=1.49",
    # PDF
    "pymupdf>=1.25",
    # LLM / ML
    "instructor>=1.7",
    "openai>=1.60",
    "anthropic>=0.43",
    "sentence-transformers>=3.4",
    # Task Queue
    "celery[redis]>=5.4",
    # Utilities
    "structlog>=24.4",
    "redis>=5.2",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "mypy>=1.14",
    "ruff>=0.9",
    "black>=24.10",
    "types-beautifulsoup4",
    "types-redis",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests requiring external services (deselect with '-m \"not integration\"')",
]
